tests/snapshots/snapshot_tests__1.math.loi.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
stmts:
  - Print:
      expr:
        Number: 10
  - Print:
      expr:
        Number: 5
  - Print:
      expr:
        Number: 3.14
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 1
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 2
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 3
  - Print:
      expr:
        Var: x
  - Let:
      name: x
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Number: 3
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 10
          op: Sub
          right:
            Number: 2
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 4
          op: Mul
          right:
            Number: 3
  - Let:
      name: w
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 20
          op: Div
          right:
            Number: 4
  - Print:
      expr:
        Var: x
  - Print:
      expr:
        Var: y
  - Print:
      expr:
        Var: z
  - Print:
      expr:
        Var: w
  - Let:
      name: x
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Binary:
              left:
                Number: 3
              op: Mul
              right:
                Number: 2
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Number: 5
              op: Add
              right:
                Number: 3
          op: Mul
          right:
            Number: 2
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Number: 10
              op: Sub
              right:
                Binary:
                  left:
                    Number: 2
                  op: Mul
                  right:
                    Number: 3
          op: Add
          right:
            Number: 1
  - Print:
      expr:
        Var: x
  - Print:
      expr:
        Var: y
  - Print:
      expr:
        Var: z
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 10
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: y
          op: Add
          right:
            Var: x
  - Print:
      expr:
        Var: z
  - Let:
      name: x
      kind: ImmutableStatic
      value:
        Number: 10
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 5
  - Print:
      expr:
        Var: y
  - Let:
      name: x
      kind: Dynamic
      value:
        Number: 5
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 10
  - Print:
      expr:
        Var: x
  - Let:
      name: x
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Number: 3
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: y
          op: Mul
          right:
            Number: 2
  - Print:
      expr:
        Var: z
  - Print:
      expr:
        Number: 10
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 1
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 2
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 3
  - Let:
      name: x
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Number: 3
  - Let:
      name: y
      kind: ImmutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Print:
      expr:
        Var: y
  - Let:
      name: x
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Number: 3
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Print:
      expr:
        Var: y
