tests/snapshots/snapshot_tests__intermediate-representation-IR-transformation.loi.snap
---
source: tests/snapshot_tests.rs
expression: ast
---
stmts:
  - Let:
      name: val1
      kind: MutableStatic
      value:
        Binary:
          left:
            Number: 5
          op: Add
          right:
            Number: 3
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 10
  - Let:
      name: y
      kind: MutableStatic
      value:
        Var: x
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Number: 5
              op: Add
              right:
                Number: 3
          op: Add
          right:
            Binary:
              left:
                Number: 2
              op: Add
              right:
                Number: 1
  - Let:
      name: y
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Let:
      name: z
      kind: MutableStatic
      value:
        Binary:
          left:
            Var: x
          op: Add
          right:
            Number: 2
  - Print:
      expr:
        Var: y
expr: ~
